# Exoplanet-Hunter-V1

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  app.py  dashboard.html  docker-compose.yml  h.ipynb  pyproject.toml  requirements.txt  stars.csv  testing_stuff.ipynb
data/: MAST_2026-06-16T0513.csv
exoplanet_hunter/: __init__.py  candidates.py  config.py  fits_reader.py  io.py  lightcurve.py  periodogram.py  pipeline.py  plots.py  reporting.py  schemas.py
