[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "exoplanet-hunter"
version = "1.0.0"
description = "Exoplanet transit candidate detection from TESS/Kepler FITS files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "lightkurve>=2.4,<3.0",
    "astropy>=6.0,<8.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "matplotlib>=3.8,<4.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["exoplanet_hunter*"]
